--- a/Esports/index.html
+++ b/Esports/index.html
@@ -302,35 +302,8 @@
                         Thunderpick LoL Spring 2025: Earn Up to €20 in Weekly
                         Cash Bonuses <br />
 
-                        <strong> Promotion ended</strong>
+                        <strong> Promotion expires on June 15th, 2025</strong>
                       </h2>
-                      <div class="news-button">
-                        <button>Read More</button>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-
-                <!--ggbet lol may 2025-->
-                <div class="news-item">
-                  <a href="/News-Articles/GGBet-League-Of-Legends-200-Bonus/">
-                    <div class="news-banner">
-                      <img
-                        src="/img/news-banners/ggbet-lol-may-news.webp"
-                        width="300"
-                        height="200"
-                        alt="ggbet-esl-bangkok-news"
-                        loading="lazy"
-                      />
-                    </div>
-                    <div class="news-content">
-                      <h2>
-                        🎮 Level Up with League of Legends at GG.Bet – Get Up to
-                        $200 in Bonus Rewards! <br />
-
-                        <strong>Offer expires on June 1st 2025</strong>
-                      </h2>
-
                       <div class="news-button">
                         <button>Read More</button>
                       </div>
