--- a/Sports/index.html
+++ b/Sports/index.html
@@ -281,6 +281,31 @@
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
 
+                <!-- roobet jun sportsbook-->
+                <div class="news-item">
+                  <a href="/News-Articles/Roobet_Jun_Sportsbook_Bonanza/">
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/Roobet_Jun_Sportsbook_Bonanza_news.webp"
+                        width="300"
+                        height="200"
+                        alt="Mission Uncrossable Banner"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        Roobet’s June Sportsbook Bonanza – Where Crypto Meets
+                        High-Stakes Action <br />
+                        <strong>Offer expires on July 13th 2025</strong>
+                      </h2>
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
                 <!--duelbits nba 2025-->
                 <div class="news-item">
                   <a
@@ -402,32 +427,6 @@
                     </div>
                     <div class="news-content">
                       <h2>Unlock BetFury Bonuses with Promo Codes</h2>
-
-                      <div class="news-button">
-                        <button>Read More</button>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-                <!-- UEFA Champions League Stake Back Challenge-->
-                <div class="news-item">
-                  <a
-                    href="/News-Articles/Bc.Game-UEFA-Champions-League-Stake-Back-Challenge/"
-                  >
-                    <div class="news-banner">
-                      <img
-                        src="/img/news-banners/Bc.Game-UEFA-Champions-League-Stake-Back-Challenge-news.webp"
-                        width="300"
-                        height="200"
-                        alt="ggbet-esl-bangkok-news"
-                        loading="lazy"
-                      />
-                    </div>
-                    <div class="news-content">
-                      <h2>
-                        Get Up to 10% Weekly Stake Back! <br />
-                        <strong> Offer expires on 1st of June 2025</strong>
-                      </h2>
 
                       <div class="news-button">
                         <button>Read More</button>
