new esports promo

--- a/Esports/index.html
+++ b/Esports/index.html
@@ -282,6 +282,32 @@
             <div class="news-wrapper">
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
+                <!-- bcgame esports master challnege-->
+                <div class="news-item">
+                  <a href="/News-Articles/BC.Game_Esports_Masters_Challenge/">
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/BCGame_master_news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        BC.Game Esports Masters Challenge – Win Up to $1,000 in
+                        Free Bets <br />
+
+                        <strong> Offer expires on June 16th, 2025 </strong>
+                      </h2>
+
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
 
                 <!-- thunderpick-lol-bet-2025 -->
                 <div class="news-item">
