top3 update esports

--- a/Esports/index.html
+++ b/Esports/index.html
@@ -485,16 +485,14 @@
               </div>
 
               <div class="top top2">
-                <a
-                  href="https://lootclick.net/_HszlLf-Uqqkt5ET4DcCllGNd7ZgqdRLk/1/"
-                >
+                <a href="https://ggbetpro.com/l/66c44186c92785c3930b1a10">
                   <div class="top-left nr2"><p class="n1">2</p></div>
                   <div class="img-box-top">
-                    <img src="/img/loot.bet-logo.webp" alt="BetFury logo" />
+                    <img src="/img/GG.bet-logo.webp" alt="BetFury logo" />
                   </div>
 
                   <div class="content-top">
-                    <p>First deposit bonus 100% up to 100€</p>
+                    <p>Welcome Bonus up to 500% + 200$ in free bets</p>
                   </div>
 
                   <div class="top-bonus">
@@ -504,14 +502,14 @@
               </div>
 
               <div class="top top3">
-                <a href="https://wildpartners.app/a55d1e542">
+                <a href="https://bc.game/i-2bp167xaa-n/">
                   <div class="top-left nr3"><p class="n1">3</p></div>
                   <div class="img-box-top">
-                    <img src="/img/wild-logo.webp" alt="BetFury logo" />
+                    <img src="/img/BC-Game.webp" alt="BetFury logo" />
                   </div>
 
                   <div class="content-top">
-                    <p>First deposit 100% bonus up to 200$ in free bets</p>
+                    <p>Welcome Bonus up to 100% + 20 free bets</p>
                   </div>
 
                   <div class="top-bonus">
