--- a/Esports/index.html
+++ b/Esports/index.html
@@ -475,7 +475,7 @@
                   </div>
 
                   <div class="content-top">
-                    <p>20% cashback + $5 Free bet</p>
+                    <p>Parlay Power Play – $40K in Prizes</p>
                   </div>
 
                   <div class="top-bonus">
@@ -598,7 +598,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">20% cashback + $5 Free bet</p>
+                <p class="info">Parlay Power Play – $40K in Prizes</p>
               </div>
 
               <div class="buttons-bonus">
