--- a/Reviews-page/Roobet/index.html
+++ b/Reviews-page/Roobet/index.html
@@ -482,8 +482,8 @@
                 </ul>
               </div>
               <div class="casino-bonus">
-                <p class="casino-bonus-title">Casino bonus</p>
-                <p>20% Cashback up to 1400$</p>
+                <p class="casino-bonus-title"></p>
+                <p>Parlay Power Play – $40K in Prizes</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
@@ -508,8 +508,8 @@
                 </ul>
               </div>
               <div class="casino-bonus">
-                <p class="casino-bonus-title">ESports bonus</p>
-                <p>20% cashback + $5 Free bet</p>
+                <p class="casino-bonus-title"></p>
+                <p>Parlay Power Play – $40K in Prizes</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
@@ -533,8 +533,8 @@
                 </ul>
               </div>
               <div class="casino-bonus">
-                <p class="casino-bonus-title">Sports bonus</p>
-                <p>20% cashback + $5 Free bet</p>
+                <p class="casino-bonus-title"></p>
+                <p>Parlay Power Play – $40K in Prizes</p>
               </div>
               <div class="buttons-toWebsite">
                 <div class="promo-code">
@@ -564,30 +564,6 @@
           <strong>Sportsbook promotions</strong>, or their new
           <strong>loyalty rewards system</strong>, every bet is a new chance to
           boost your winnings.
-        </p>
-
-        <h2>Welcome Offer</h2>
-
-        <p>
-          You’ll receive an email inviting you to enjoy
-          <strong>7 Days of Cashback</strong> as soon as you sign up. Kick off
-          your Roobet journey with up to <strong>$200 a day</strong> for seven
-          consecutive days as you explore your new gaming playground.
-        </p>
-        <div class="review-img">
-          <img
-            src="/img/news-banners/roobet-welcome.webp"
-            width="300"
-            height="200"
-            loading="lazy"
-            alt="katsubet site"
-          />
-        </div>
-
-        <p>
-          New to Sportsbook? Make your first deposit of <strong>$10</strong> or
-          more, and you’ll snag an extra <strong>$5 Free Bet</strong> on top of
-          the daily cashback as a Welcome Gift.
         </p>
 
         <h2>Rewards and Loyalty Program</h2>
