--- a/Bonuses/Cashback/index.html
+++ b/Bonuses/Cashback/index.html
@@ -253,20 +253,18 @@
 
           <div class="top-container">
             <div class="top top1">
-              <a
-                href="https://go.roobetaffiliates.com/visit/?bta=39114&nci=5349"
-              >
+              <a href="https://wildpartners.app/a55d1e542">
                 <div class="top-left nr1"><p class="n1">1</p></div>
                 <div class="img-box-top">
                   <img
-                    src="/img/Roobet.webp"
+                    src="/img/wild-logo.webp"
                     loading="lazy"
                     alt="roobet logo"
                   />
                 </div>
 
                 <div class="content-top">
-                  <p>20% Cashback up to 1400$</p>
+                  <p>20% weekly Cashback</p>
                 </div>
 
                 <div class="top-bonus">
@@ -314,142 +312,6 @@
       </div>
 
       <div class="container-casinos">
-        <!-- Roobet -->
-        <div class="main">
-          <div class="second">
-            <div class="casino-info">
-              <a class="roobet-infoLinks-box" href="/Reviews-page/Roobet">
-                <div class="links-to-roobet-info">
-                  <div class="content-box">
-                    <div class="Image-box">
-                      <img
-                        class="casino-image"
-                        src="/img/Roobet.webp"
-                        loading="lazy"
-                        alt="roobet logo"
-                      />
-                    </div>
-                    <div class="name-buttons">
-                      <div class="name-holder">
-                        <p class="casino-name">Roobet</p>
-                      </div>
-                      <div class="buttons-casino-info">
-                        <button class="best-rewards">
-                          Best Rewards System
-                        </button>
-                        <button class="high-withdrawal">
-                          UFC Brand Ambassadors
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <div class="casino-bonus">
-              <div class="bonus-info">
-                <p class="info">20% Cashback up to 1400$</p>
-              </div>
-
-              <div class="buttons-bonus">
-                <a href="/Reviews-page/Roobet">
-                  <button class="inactive">Review</button>
-                </a>
-                <a
-                  href="https://go.roobetaffiliates.com/visit/?bta=39114&nci=6458"
-                >
-                  <button class="bonus-link">Claim bonus</button>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="more-info">
-            <button type="button" data-modal="#roobet-popUp-Cashback">
-              more info
-            </button>
-          </div>
-
-          <div class="modal" id="roobet-popUp-Cashback">
-            <div
-              type="button"
-              data-modal="#roobet-popUp-Cashback"
-              class="modal-close"
-            ></div>
-            <div class="modal-content">
-              <button
-                type="button"
-                data-modal="#roobet-popUp-Cashback"
-                class="modal-close"
-                id="close-insede-content"
-              >
-                &times;
-              </button>
-
-              <div class="deposit-methods">
-                <h2>Deposit Methods:</h2>
-                <div class="logo-methods">
-                  <img
-                    class="card-tipe"
-                    src="/img/visa-logo.webp"
-                    loading="lazy"
-                    alt="visa logo"
-                  />
-                  <img
-                    class="card-tipe"
-                    src="/img/mastercard-logo.webp"
-                    loading="lazy"
-                    alt="mastercard logo"
-                  />
-                  <img
-                    class="card-tipe"
-                    src="/img/skrill-logo.webp"
-                    loading="lazy"
-                    alt="skrill icon"
-                  />
-                  <img
-                    class="card-tipe tipe4"
-                    src="/img/AstroPay.webp"
-                    loading="lazy"
-                    alt="astropay icon"
-                  />
-                  <img
-                    class="card-tipe"
-                    src="/img/litecoin-logo.webp"
-                    loading="lazy"
-                    alt="litecoin logo"
-                  />
-                  <img
-                    class="card-tipe"
-                    src="/img/ethrtium-logo.webp"
-                    loading="lazy"
-                    alt="etherium logo"
-                  />
-                  <img
-                    class="card-tipe"
-                    id="bitCoin-logo"
-                    src="/img/bit-coin-logo.webp"
-                    loading="lazy"
-                    alt="bitcoin logo"
-                  />
-                </div>
-              </div>
-              <div class="withdrawal">
-                <h2>Withdrawal Time : 1-24 hours</h2>
-              </div>
-
-              <div class="bonus-terms">
-                <h2>Bonus Terms & Conditions</h2>
-                <ul>
-                  <li>Minimum Deposit: $0.1</li>
-                  <li>Wagering: 0</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-
-          <div class="bottom"></div>
-        </div>
-
         <!-- BetFury -->
         <div class="main">
           <div class="second">
