--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -671,7 +671,7 @@
                   </div>
 
                   <div class="content-top">
-                    <p>20% Cashback up to 1400$</p>
+                    <p>Parlay Power Play – $40K in Prizes</p>
                   </div>
 
                   <div class="top-bonus">
@@ -762,7 +762,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">20% Cashback up to 1400$</p>
+                <p class="info">Parlay Power Play – $40K in Prizes</p>
               </div>
 
               <div class="buttons-bonus">
