--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
                   </div>
 
                   <div class="content-top">
-                    <p>20% Cashback up to 1400$</p>
+                    <p>Parlay Power Play – $40K in Prizes</p>
                   </div>
 
                   <div class="top-bonus">
@@ -839,7 +839,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">20% Cashback up to 1400$</p>
+                <p class="info">Parlay Power Play – $40K in Prizes</p>
               </div>
 
               <div class="buttons-bonus">
