--- a/Esports/index.html
+++ b/Esports/index.html
@@ -282,6 +282,34 @@
             <div class="news-wrapper">
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
+
+                <!-- ggbet bonus chest-->
+                <div class="news-item">
+                  <a href="/News-Articles/GGBet-Bonus-Chest-Promo/">
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/ggbet-bonus-cest-news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        GG.Bet Bonus Chest Promotion – Weekly Rewards and
+                        Exclusive Prizes <br />
+
+                        <strong> Offer onfoing </strong>
+                      </h2>
+
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
                 <!-- bcgame esports master challnege-->
                 <div class="news-item">
                   <a href="/News-Articles/BC.Game_Esports_Masters_Challenge/">
