ggbet nba promo

--- a/Sports/index.html
+++ b/Sports/index.html
@@ -281,6 +281,35 @@
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
 
+                <!--ggbet nba 2025-->
+                <div class="news-item">
+                  <a
+                    href="/News-Articles/GGBET_NBA_Freebet_Promo–Up_to_150Euro_in_Free_Bets/"
+                  >
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/ggbet-basketball-finals-2025-news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        GG.BET NBA Freebet Promo: Get up to €150 in Freebets for
+                        Your Deposits! <br />
+
+                        <strong>Offer expires on June 12, 2025</strong>
+                      </h2>
+
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
                 <!-- roobet jun sportsbook-->
                 <div class="news-item">
                   <a href="/News-Articles/Roobet_Jun_Sportsbook_Bonanza/">
