--- a/index.html
+++ b/index.html
@@ -254,6 +254,34 @@
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
 
+                  <!-- bcgame june free spins-->
+            <div class="news-item">
+              <a
+                href="/News-Articles/BCGame_June_Spins_Jubilee–20,000Dolars_in_Free_Spins/"
+              >
+                <div class="news-banner">
+                  <img
+                    src="/img/news-banners/bcgame_june_spins_news.webp"
+                    width="300"
+                    height="200"
+                    alt="ggbet-esl-bangkok-news"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="news-content">
+                  <h2>
+                    BC.Game June Spins Jubilee – $20,000 in Free Spins Up for
+                    Grabs! <br>
+                  
+                  <strong> Offer expires on July 1st, 2025 </strong></h2>
+
+                  <div class="news-button">
+                    <button>Read More</button>
+                  </div>
+                </div>
+              </a>
+            </div>
+
                  <!--ggbet nba 2025-->
             <div class="news-item">
               <a href="/News-Articles/GGBET_NBA_Freebet_Promo–Up_to_150Euro_in_Free_Bets/">
