--- a/Sports/index.html
+++ b/Sports/index.html
@@ -281,6 +281,31 @@
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
 
+                <!-- Sports Korea-->
+                <div class="news-item">
+                  <a href="/News-Articles/BCGame_Sports_Korea_Free_Bet_Bonus/">
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/bcgame-sports-july-news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        BC.Game Sports Korea Free Bet Bonus – July 2025 <br />
+                        <strong> Offer expires on 31 of July 2025</strong>
+                      </h2>
+
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
                 <!-- roobet jun sportsbook-->
                 <div class="news-item">
                   <a href="/News-Articles/Roobet_Jun_Sportsbook_Bonanza/">
