--- a/Sports/index.html
+++ b/Sports/index.html
@@ -281,6 +281,32 @@
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
 
+                 <!-- rupy-->
+            <div class="news-item">
+              <a href="/News-Articles/BCGame_₹1000_Free_Cash_Reward/">
+                <div class="news-banner">
+                  <img
+                    src="/img/news-banners/bcgame-rupy-news.webp"
+                    width="300"
+                    height="200"
+                    alt="ggbet-esl-bangkok-news"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="news-content">
+                  <h2>
+                    No withdrawal limits and no wagering requirements ₹1,000
+                    Free Cash Reward Now Credited <br>
+                  
+                  <strong> Offer expires on 1st of January 2026</strong></h2>
+
+                  <div class="news-button">
+                    <button>Read More</button>
+                  </div>
+                </div>
+              </a>
+            </div>
+
                 <!-- Sports Korea-->
                 <div class="news-item">
                   <a href="/News-Articles/BCGame_Sports_Korea_Free_Bet_Bonus/">
