--- a/index.html
+++ b/index.html
@@ -254,6 +254,31 @@
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
 
+                <!-- baccarat -->
+            <div class="news-item">
+              <a href="/News-Articles/BCGame_Baccarat_Cash_Drops/">
+                <div class="news-banner">
+                  <img
+                    src="/img/news-banners/bcgame-bacarat-news.webp"
+                    width="300"
+                    height="200"
+                    alt="ggbet-esl-bangkok-news"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="news-content">
+                  <h2>
+                    BC.Game Baccarat Cash Drops – $252,000 in Weekly Prizes! <br>
+                  
+                  <p><strong> Offer expires on 24th August 2025</strong></h2>
+
+                  <div class="news-button">
+                    <button>Read More</button>
+                  </div>
+                </div>
+              </a>
+            </div>
+
                 <!-- rupy-->
             <div class="news-item">
               <a href="/News-Articles/BCGame_₹1000_Free_Cash_Reward/">
