--- a/News-Articles/BCGame_Baccarat_Cash_Drops/index.html
+++ b/News-Articles/BCGame_Baccarat_Cash_Drops/index.html
@@ -25,7 +25,7 @@
     <link rel="icon" type=“image/x-icon” href="/img/favicon.ico">
     <link
       rel="canonical"
-      href="https://www.all4wins.com/News-Articles/Bc.BCGame_Baccarat_Cash_Drops/"
+      href="https://www.all4wins.com/News-Articles/BCGame_Baccarat_Cash_Drops/"
     />
 
     <link rel="stylesheet" href="/newx-demoGames.css" />
@@ -53,7 +53,7 @@
             "@type": "ListItem",
             "position": 3,
             "name": "BCGame Baccarat Cash Drops",
-            "item": "https://www.all4wins.com/News-Articles/Bc.BCGame_Baccarat_Cash_Drops/"
+            "item": "https://www.all4wins.com/News-Articles/BCGame_Baccarat_Cash_Drops/"
           }
         ]
       }
