--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -278,6 +278,31 @@
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
 
+                <!-- microgaming -->
+            <div class="news-item">
+              <a href="/News-Articles/BCGame_Microgaming_Summer_Free_Spins/">
+                <div class="news-banner">
+                  <img
+                    src="/img/news-banners/bcgame-microgames-news.webp"
+                    width="300"
+                    height="200"
+                    alt="ggbet-esl-bangkok-news"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="news-content">
+                  <h2>
+                    Microgaming Summer Spins – Win Free Spins Daily at BC.Game <br>
+                  
+                  <strong> Offer expires on 1st August 2025</strong></h2>
+
+                  <div class="news-button">
+                    <button>Read More</button>
+                  </div>
+                </div>
+              </a>
+            </div>
+
                 <!-- baccarat -->
             <div class="news-item">
               <a href="/News-Articles/BCGame_Baccarat_Cash_Drops/">
