--- a/News-Articles/BCGame_Microgaming_Summer_Free_Spins/index.html
+++ b/News-Articles/BCGame_Microgaming_Summer_Free_Spins/index.html
@@ -221,7 +221,7 @@
     <div id="breadcrumbs" class="breadcrumbs">
       <a href="/">Home</a><span>&gt;</span
       ><a href="https://www.all4wins.com/News/">News</a><span>&gt;</span
-      ><span>BC.Game Spadegaming Tournament $570,700 in Prizes</span>
+      ><span>BCGame Microgaming Summer Free Spins</span>
     </div>
     <!-- 
 
