--- a/Reviews-page/Thunderpick/index.html
+++ b/Reviews-page/Thunderpick/index.html
@@ -679,72 +679,191 @@
           cryptocurrencies are all supported.
         </p>
 
-        <h2>Weekly Giveaways and Improved Ranking System</h2>
-
+        <h2>Thunderpick Rewards Program – Play More, Get More</h2>
         <p>
-          Thunderpick has reinvigorated its promotional efforts with weekly
-          freebies and an enhanced Rank system, delivering significant potential
-          for rewards.
+          Whether you're just starting out or already a pro, the Thunderpick
+          Rewards Program lets you collect real perks just by placing bets. No
+          tricks, no fine print — just consistent rewards for your gameplay.
         </p>
 
+        <h3>Getting Started is Easy</h3>
         <ul>
           <li>
-            <strong>Weekly Giveaways</strong>: Since switching from daily to
-            weekly, the prize pool has grown dramatically from €2,850 to €8,000.
-            Players can win one of five prizes per weekly draw based on their
-            ranking.
+            <strong>Join Instantly:</strong> Create an account and you're in. No
+            extra steps. Start earning from your very first wager.
+          </li>
+          <li>
+            <strong>Bet & Earn XP:</strong> Every single bet earns you XP — win
+            or lose. The more you bet, the faster you level up.
+          </li>
+          <li>
+            <strong>Unlock Exclusive Rewards:</strong> Reach new tiers and get
+            rewarded with free spins, bonuses, cash, giveaways, and VIP extras.
           </li>
         </ul>
 
-        <ul>
-          <li><strong>Challenger</strong>: €1,000 every Sunday at 16:00 UTC</li>
-          <li><strong>Diamond</strong>: €500 every Saturday at 16:00 UTC</li>
-          <li><strong>Gold</strong>: €300 every Friday at 16:00 UTC</li>
-          <li><strong>Silver</strong>: €150 every Thursday at 16:00 UTC</li>
-          <li><strong>Bronze</strong>: €50 every Wednesday at 16:00 UTC</li>
-        </ul>
-        <div class="review-img">
-          <img
-            src="/img/news-banners/thunderpick-ranking.webp"
-            loading="lazy"
-            alt="thunderpick ranking sistem"
-          />
-        </div>
-
-        <p>
-          The system motivates players to engage with the platform and compete
-          for appealing prizes. The promotion prize pool has already reached
-          €53,000!
-        </p>
-
-        <h2>Monthly loyalty bonuses</h2>
-
-        <p>
-          Thunderpick values loyalty and takes it seriously. The Monthly Loyalty
-          Bonus surprises active players who routinely wager on their favorite
-          esports, sporting events, or casino games with bonuses. Every month,
-          300-500 of the most devoted customers receive a bonus as a gift of
-          appreciation, which they may redeem in their account's bonus area.
-        </p>
-
-        <h2>Revenue Through the Referral System</h2>
-
-        <p>
-          Thunderpick has a profitable Referral System, which allows users to
-          earn by sharing their great experiences:
-        </p>
-
+        <h3>Why Join Thunderpick’s Rewards Program?</h3>
         <ul>
           <li>
-            <strong>Referral Earnings</strong>: Get up to 30% of the money
-            produced by referred users.
+            <strong>Free to Join:</strong> Start collecting points from your
+            very first bet.
           </li>
           <li>
-            <strong>Rank Points</strong>: Earn an equal number of Rank Points as
-            their initial deposit, increasing your status and potential
-            incentives.
+            <strong>Earn on Every Bet:</strong> Win or lose, XP is always added
+            to your progress.
+          </li>
+          <li>
+            <strong>Exclusive Bonuses:</strong> Enhanced odds, tier bonuses, VIP
+            access, and more.
           </li>
         </ul>
+
+        <h3>How to Earn XP & Level Up</h3>
+        <ul>
+          <li><strong>Casino Bets:</strong> Every €1 you wager = 1 XP.</li>
+          <li>
+            <strong>Sports & Esports Bets:</strong> XP = Bet Amount × Odds
+            (capped at 5x).
+          </li>
+        </ul>
+        <p>
+          <strong>Note:</strong> Bets made using bonus funds do not earn XP.
+          Stick to real balance wagers for progress.
+        </p>
+
+        <h3>Thunderpick VIP Tiers & Perks</h3>
+
+        <h4>Iron</h4>
+        <ul>
+          <li>Tier-up bonus</li>
+          <li>Access to races</li>
+          <li>Access to chat</li>
+          <li>Refer-a-friend bonus</li>
+        </ul>
+
+        <h4>Bronze</h4>
+        <ul>
+          <li>Daily free spins</li>
+          <li>Access to giveaways</li>
+          <li>Tier-up bonus</li>
+        </ul>
+
+        <h4>Silver</h4>
+        <ul>
+          <li>Monthly cash bonus</li>
+          <li>Daily free spins</li>
+          <li>Access to giveaways</li>
+          <li>Tier-up bonus</li>
+        </ul>
+
+        <h4>Gold</h4>
+        <ul>
+          <li>Mega free spins</li>
+          <li>Monthly cash bonus</li>
+          <li>Daily free spins</li>
+          <li>Access to giveaways</li>
+          <li>Tier-up bonus</li>
+        </ul>
+
+        <h4>Platinum</h4>
+        <ul>
+          <li>Wednesday reload bonus</li>
+          <li>Mega free spins</li>
+          <li>Monthly cash bonus</li>
+          <li>Daily free spins</li>
+          <li>Access to giveaways</li>
+          <li>Tier-up bonus</li>
+        </ul>
+
+        <h4>Emerald</h4>
+        <ul>
+          <li>Friday cash bonus</li>
+          <li>Wednesday reload bonus</li>
+          <li>Mega free spins</li>
+          <li>Monthly cash bonus</li>
+          <li>Daily free spins</li>
+          <li>Access to giveaways</li>
+          <li>Tier-up bonus</li>
+        </ul>
+
+        <h4>Diamond</h4>
+        <ul>
+          <li>Random drop</li>
+          <li>Friday cash bonus</li>
+          <li>Wednesday reload bonus</li>
+          <li>Mega free spins</li>
+          <li>Monthly cash bonus</li>
+          <li>Daily free spins</li>
+          <li>Access to giveaways</li>
+          <li>Tier-up bonus</li>
+        </ul>
+
+        <h4>Master</h4>
+        <ul>
+          <li>Exclusive VIP Host Experience</li>
+          <li>Random drop</li>
+          <li>Friday cash bonus</li>
+          <li>Wednesday reload bonus</li>
+          <li>Mega free spins</li>
+          <li>Monthly cash bonus</li>
+          <li>Daily free spins</li>
+          <li>Access to giveaways</li>
+          <li>Tier-up bonus</li>
+        </ul>
+
+        <h4>Divine</h4>
+        <ul>
+          <li>Increased daily and weekly bonuses</li>
+          <li>Random drop</li>
+          <li>Friday cash bonus</li>
+          <li>Wednesday reload bonus</li>
+          <li>Mega free spins</li>
+          <li>Monthly cash bonus</li>
+          <li>Daily free spins</li>
+          <li>Access to giveaways</li>
+          <li>Tier-up bonus</li>
+        </ul>
+
+        <h4>Immortal</h4>
+        <ul>
+          <li>Luxury giveaway</li>
+          <li>Random drop</li>
+          <li>Friday cash bonus</li>
+          <li>Wednesday reload bonus</li>
+          <li>Mega free spins</li>
+          <li>Monthly cash bonus</li>
+          <li>Daily free spins</li>
+          <li>Access to giveaways</li>
+          <li>Tier-up bonus</li>
+        </ul>
+
+        <h4>Global Elite</h4>
+        <ul>
+          <li>Exclusive Global Elite perks</li>
+          <li>Random drop</li>
+          <li>Friday cash bonus</li>
+          <li>Wednesday reload bonus</li>
+          <li>Mega free spins</li>
+          <li>Monthly cash bonus</li>
+          <li>Daily free spins</li>
+          <li>Access to giveaways</li>
+          <li>Tier-up bonus</li>
+        </ul>
+
+        <h3>Final Thoughts</h3>
+        <p>
+          The Thunderpick Rewards Program is designed to reward you no matter
+          how you play. Every real-money bet counts toward your XP, helping you
+          climb the ladder and unlock better and better perks. From free spins
+          and reload bonuses to luxury giveaways and personal VIP hosts — this
+          system makes every wager worth it.
+        </p>
+        <p>
+          <a
+            href="https://go.thunder.partners/visit/?bta=36640&nci=5520&campaign=ALL4WINS"
+            >Sign up</a
+          >, start betting, and let the rewards roll in.
+        </p>
       </div>
       <div id="Games" class="tabcontent-info">
         <h2>Explore Thunderpick's Diverse Gaming and Betting Systems</h2>
