--- a/Reviews-page/Thunderpick/index.html
+++ b/Reviews-page/Thunderpick/index.html
@@ -633,7 +633,7 @@
         <p>
           If you are looking for an online platform that provides rewarding
           incentives and entertaining promotions, Thunderpick should be at the
-          top of your list.
+          top of your list !
         </p>
         <p>
           Thunderpick's bonus scheme is intended to enhance your gaming
