--- a/Sports/index.html
+++ b/Sports/index.html
@@ -280,32 +280,58 @@
             <div class="news-wrapper">
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
+                <!-- roobet august action-->
+                <div class="news-item">
+                  <a href="/News-Articles/Roobet_August_Action/">
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/roobet-sports-august2025-news.webp"
+                        width="300"
+                        height="200"
+                        alt="Mission Uncrossable Banner"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        August Action: Exclusive Roobet Sportsbook Promos for
+                        Esports & Football Fans <br />
 
-                 <!-- rupy-->
-            <div class="news-item">
-              <a href="/News-Articles/BCGame_₹1000_Free_Cash_Reward/">
-                <div class="news-banner">
-                  <img
-                    src="/img/news-banners/bcgame-rupy-news.webp"
-                    width="300"
-                    height="200"
-                    alt="ggbet-esl-bangkok-news"
-                    loading="lazy"
-                  />
+                        <strong>Offer expires on August 24th, 2025</strong>
+                      </h2>
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
                 </div>
-                <div class="news-content">
-                  <h2>
-                    No withdrawal limits and no wagering requirements ₹1,000
-                    Free Cash Reward Now Credited <br>
-                  
-                  <strong> Offer expires on 1st of January 2026</strong></h2>
 
-                  <div class="news-button">
-                    <button>Read More</button>
-                  </div>
+                <!-- rupy-->
+                <div class="news-item">
+                  <a href="/News-Articles/BCGame_₹1000_Free_Cash_Reward/">
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/bcgame-rupy-news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        No withdrawal limits and no wagering requirements ₹1,000
+                        Free Cash Reward Now Credited <br />
+
+                        <strong> Offer expires on 1st of January 2026</strong>
+                      </h2>
+
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
                 </div>
-              </a>
-            </div>
 
                 <!-- Sports Korea-->
                 <div class="news-item">
